--- a/creating_a_vector.ipynb
+++ b/creating_a_vector.ipynb
@@ -61,18 +61,7 @@
    "execution_count": null,
    "id": "e701044c",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with '.venv (Python 3.14.0)' requires the ipykernel package.\n",
-      "\u001b[1;31mInstall 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'd:/MACHINE-LEARNING/Practice/.venv/Scripts/python.exe -m pip install ipykernel -U --force-reinstall'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -88,6 +77,14 @@
    "source": [
     "# Problem 1:\n",
     "Ek vector banao jo 1 se 10 tak ke even numbers store kare."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db0cf3b2",
+   "metadata": {},
+   "source": [
+    "# Solution:"
    ]
   },
   {
@@ -113,6 +110,162 @@
     "  - step = 2\n",
     "\n",
     "Is se humein automatically even numbers mil gaye bina loop likhe. Traditional tareeqa hota loop se, lekin NumPy ka style fast aur clean hota hai."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d24dbd97",
+   "metadata": {},
+   "source": [
+    "# Problem 2:\n",
+    "Ek vector banao jismein 5 random decimal numbers hon jo 0 aur 1 ke beech hon.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8dac3bd",
+   "metadata": {},
+   "source": [
+    "# Solution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1c0886f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vector = np.random.rand(5)\n",
+    "print(\"5 random decimals numbers:\", vector)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39a3fa00",
+   "metadata": {},
+   "source": [
+    "# Discussion:\n",
+    "   - np.random.rand(5) ka matlab:\n",
+    "   - 5 random values generate karo\n",
+    "   - Har value 0 aur 1 ke beech hogi\n",
+    "   \n",
+    "Har dafa code chalane par different values aayengi. Ye technique machine learning, simulations, aur testing ke liye bohat use hoti hai, jahan dummy data chahiye hota hai"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b3ed95e",
+   "metadata": {},
+   "source": [
+    "# Problem 3\n",
+    "0 se 1 tak 6 equally spaced values ka vector banao."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c57373d5",
+   "metadata": {},
+   "source": [
+    "# Solution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d029011",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vector = np.linspace(0, 1, 6)\n",
+    "print(\"vector of 6 equally spaced values:\", vector)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbc049c3",
+   "metadata": {},
+   "source": [
+    "# Discussion:\n",
+    "linspace(start, end, count) \n",
+    "use hota hai jab tumhein range ko barabar parts mein divide karna ho. Ye data visualization aur scientific experiments mein bohat kaam aata hai."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d27190c8",
+   "metadata": {},
+   "source": [
+    "# Problem 4\n",
+    "Ek vector banao jismein sab values 7 hon, length 5."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dea4ed58",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# Solution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2341c6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vector = np.full(5, 7)\n",
+    "print(\"vector with 7\", vector)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2692b3f2",
+   "metadata": {},
+   "source": [
+    "# Discussion:\n",
+    "\n",
+    "np.full(size, value) tab use hota hai jab tumhein same value se initialize karna ho, jaise default weights, masks, ya placeholders."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b071fd3",
+   "metadata": {},
+   "source": [
+    "# Problem 5\n",
+    "Ek vector banao jismein pehle 4 zeros aur baqi 3 ones hon."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "968c784e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vector = np.concatenate((np.zeros(4), np.ones(3)))\n",
+    "print(vector)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cecccf42",
+   "metadata": {},
+   "source": [
+    "# Discussion:\n",
+    "\n",
+    "zeros( ) aur ones( ) se simple vectors bante hain. concatenate() unhein jor kar complex structure banata hai. Ye technique labels aur flags banane mein kaam aati hai."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bf3a219",
+   "metadata": {},
+   "source": [
+    "This Notebook is created by [Mubashir Ali](https://www.linkedin.com/in/mubashirali3)"
    ]
   }
  ],
