--- a/creating_a_vector.ipynb
+++ b/creating_a_vector.ipynb
@@ -265,7 +265,7 @@
    "id": "3bf3a219",
    "metadata": {},
    "source": [
-    "This Notebook is created by [Mubashir Ali](https://www.linkedin.com/in/mubashirali3)"
+    "This Notebook is created by [Mubashir Ali](https://www.linkedin.com/in/mubashirali3) for educational purposes."
    ]
   }
  ],
